--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@clerk/express": "^1.5.2",
+    "@clerk/remix": "^4.7.7",
+    "@prisma/client": "^6.8.2",
     "@remix-run/node": "^2.16.7",
     "@remix-run/react": "^2.16.7",
     "@remix-run/serve": "^2.16.7",
+    "cloudinary": "^2.6.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "isbot": "^4.1.0",
+    "multer": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "svix": "^1.66.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.7",
@@ -32,6 +40,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
@@ -39,5 +48,11 @@
   },
   "engines": {
     "node": ">=20.0.0"
-  }
+  },
+  "version": "1.0.0",
+  "description": "- 📖 [Remix docs](https://remix.run/docs)",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
